update filter calls to take in sort params, update alias srvc
